--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,15 +29,31 @@ header {
   .sity-block {
     .sity-name {
       font-size: 50px;
+      border: none;
+      border-radius: 8px;
     }
+
+    .sity-name:disabled {
+      background-color: transparent;
+      color: #fff;
+      opacity: 1;
+      border: none;
+      padding: 0;
+      margin: 0;
+      appearance: none;
+    }
+
     .change-sity-block {
       display: flex;
       font-size: 18px;
       opacity: 0.6;
       margin-top: 10px;
+
       .change-sity {
         margin-right: 30px;
+        cursor: pointer;
       }
+
       .position-logo {
         margin-right: 8px;
       }
@@ -81,7 +97,7 @@ header {
 }
 
 .weather-block-wrapper {
-  margin: 215px 0;
+  margin: 210px 0;
   align-items: center;
 }
 
