--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,9 +28,10 @@ header {
 
   .sity-block {
     .sity-name {
-      font-size: 50px;
+      font-size: 20px;
       border: none;
       border-radius: 8px;
+      padding: 18px;
     }
 
     .sity-name:disabled {
@@ -41,6 +42,7 @@ header {
       padding: 0;
       margin: 0;
       appearance: none;
+      font-size: 50px;
     }
 
     .change-sity-block {
@@ -51,6 +53,10 @@ header {
 
       .change-sity {
         margin-right: 30px;
+        cursor: pointer;
+      }
+
+      .your-position {
         cursor: pointer;
       }
 
