--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -9,7 +9,11 @@
 // COLORS
 $text-color: #fff;
 $bg-sunny-color: #498cec;
-$bg-cloudy-color: #7290b9;
+$bg-cloudy-color: #5079b4;
+$bg-rain-color: #7290b9;
+$bg-storm-color: #435774;
+$bg-snow-color: #62b3ff;
+$bg-fog-color: #bbc1ca;
 
 // BRAKEPOINTS
 $breakpoint-min-sm: 576px;
