--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,22 @@ body {
   background-color: $bg-cloudy-color;
 }
 
+.rain {
+  background-color: $bg-rain-color;
+}
+
+.storm {
+  background-color: $bg-storm-color;
+}
+
+.snow {
+  background-color: $bg-snow-color;
+}
+
+.fog {
+  background-color: $bg-fog-color;
+}
+
 .main-wrapper {
   margin: 80px;
   display: flex;
@@ -103,27 +119,31 @@ header {
 }
 
 .weather-block-wrapper {
-  margin: 210px 0;
   align-items: center;
+  margin: 160px;
 }
 
 .weather-block {
   display: flex;
-  font-size: 120px;
+  font-size: 150px;
+  align-items: center;
 
   .weather-number {
     font-family: 'Lato', sans-serif;
+    margin-bottom: 30px;
     margin-left: 15px;
-  }
-  .weather-ico {
-    margin-right: 15px;
   }
 }
 .weather-description {
   text-align: center;
   font-size: 26px;
-  margin-top: 10px;
+  margin-top: -10px;
   text-transform: capitalize;
+}
+.weather-feels-like {
+  text-align: center;
+  font-size: 18px;
+  margin-top: 15px;
 }
 
 .weather-details {
