--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -10,8 +10,9 @@
 $text-color: #fff;
 $bg-sunny-color: #498cec;
 $bg-cloudy-color: #5079b4;
-$bg-rain-color: #7290b9;
-$bg-storm-color: #435774;
+$bg-drizzle-color: #7794bd;
+$bg-rain-color: #627b9e;
+$bg-storm-color: #425572;
 $bg-snow-color: #62b3ff;
 $bg-fog-color: #bbc1ca;
 
