--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,14 @@
 @import 'libs';
 @import 'global';
 
+// html {
+//   overflow-x: hidden;
+//   overflow-y: scroll;
+//   height: 100vh;
+//   margin: 0;
+//   padding: 0;
+// }
+
 body {
   color: $text-color;
 }
@@ -12,6 +20,10 @@ body {
 
 .cloudy {
   background-color: $bg-cloudy-color;
+}
+
+.drizzle {
+  background-color: $bg-drizzle-color;
 }
 
 .rain {
@@ -35,6 +47,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  height: 83vh;
 }
 
 header {
@@ -120,7 +134,6 @@ header {
 
 .weather-block-wrapper {
   align-items: center;
-  margin: 160px;
 }
 
 .weather-block {
@@ -150,6 +163,7 @@ header {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .weather-details-title {
@@ -160,4 +174,77 @@ header {
 
 .weather-details-text {
   font-size: 25px;
+}
+
+@media (max-width: 1100px) {
+  header {
+    .sity-block {
+      .change-sity-block {
+        font-size: 14px;
+        margin-top: 10px;
+        align-items: center;
+        .position-logo {
+          width: 15px;
+          height: 15px;
+          margin-right: 5px;
+        }
+      }
+      .sity-name {
+        width: 100%;
+      }
+      .sity-name:disabled {
+        font-size: 32px;
+      }
+    }
+  }
+  .main-wrapper {
+    margin: 20px;
+    height: 95vh;
+  }
+
+  .weather-details-block {
+    margin-top: 10px;
+    width: 150px;
+
+    .weather-details-title {
+      font-size: 14px;
+      line-height: 14px;
+      margin-bottom: 10px;
+    }
+    .weather-details-text {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+  }
+  .weather-details {
+    justify-content: space-between;
+  }
+  .degree-block {
+    position: absolute;
+    // left: 50%;
+    right: 10%;
+    top: 1%;
+    .degree-type {
+      padding: 5px 20px;
+    }
+  }
+  // 145px
+  .weather-description {
+    margin-top: 25px;
+  }
+  .weather-block {
+    justify-content: space-evenly;
+    .weather-number {
+      font-size: 100px;
+      margin-bottom: 0;
+    }
+    .weather-ico {
+      width: 140px;
+      height: 140px;
+      img {
+        width: 140px;
+        height: 140px;
+      }
+    }
+  }
 }
