Сделал анимации, убрал лишний мусор

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,31 +15,109 @@ body {
 }
 
 .sunny {
-  background-color: $bg-sunny-color;
+  background: linear-gradient(150deg, #498cec 0%, #82afee 60%, #2d71cf 100%);
+  animation: bgAnim 10s infinite linear;
+  background-size: 500%;
 }
 
 .cloudy {
-  background-color: $bg-cloudy-color;
+  background: linear-gradient(120deg, #5079b4 30%, #476794 70%, #567cb1 100%);
+  animation: bgAnim 10s infinite ease;
+  background-size: 1000%;
 }
 
 .drizzle {
-  background-color: $bg-drizzle-color;
+  background: linear-gradient(0deg, #7794bd 30%, #7497c7 70%, #60799c 100%);
+  animation: bgAnim 10s infinite ease;
+  background-size: 1000%;
 }
 
 .rain {
-  background-color: $bg-rain-color;
+  background: linear-gradient(90deg, #627b9e 30%, #445b79 60%, #414c58 100%);
+  animation: bgAnim 10s infinite linear;
+  background-size: 500%;
 }
 
 .storm {
-  background-color: $bg-storm-color;
+  background: linear-gradient(50deg, #425572 0%, #39485f 30%, #354a69 60%, #233044 100%);
+  animation: bgAnim 10s infinite ease;
+  background-size: 500%;
 }
 
 .snow {
-  background-color: $bg-snow-color;
+  background: linear-gradient(90deg, #62b3ff 30%, #69b4df 60%, rgb(135, 191, 255) 100%);
+  animation: bgAnim 10s infinite linear;
+  background-size: 500%;
 }
 
 .fog {
-  background-color: $bg-fog-color;
+  background: linear-gradient(30deg, #bbc1ca 25%, #a1a6ac 50%, #a9b2be 75%, #b2bdce 100%);
+  animation: bgAnim 30s infinite ease;
+  background-size: 400%;
+}
+
+@keyframes bgAnim {
+  0% {
+    background-position: 80% 0%;
+  }
+  50% {
+    background-position: 20% 100%;
+  }
+  100% {
+    background-position: 80% 0%;
+  }
+}
+
+.sunnyImg,
+.snowImg {
+  animation: roundImgAnim 60s linear infinite;
+  width: 200px;
+}
+
+.cloudyImg,
+.rainImg,
+.drizzleImg,
+.stormImg {
+  animation: cloudImgAnim 10s linear infinite;
+  width: 200px;
+}
+
+.fogImg {
+  animation: fogImgAnim 10s linear infinite;
+  width: 200px;
+}
+
+@keyframes roundImgAnim {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes cloudImgAnim {
+  0% {
+    transform: translateY(10px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes fogImgAnim {
+  0% {
+    transform: translateX(10px);
+  }
+  50% {
+    transform: translateX(-10px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
 }
 
 .main-wrapper {
@@ -176,8 +254,9 @@ header {
   font-size: 25px;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   header {
+    width: 89vw;
     .sity-block {
       .change-sity-block {
         font-size: 14px;
@@ -190,7 +269,7 @@ header {
         }
       }
       .sity-name {
-        width: 100%;
+        width: 89vw;
       }
       .sity-name:disabled {
         font-size: 32px;
@@ -204,7 +283,7 @@ header {
 
   .weather-details-block {
     margin-top: 10px;
-    width: 150px;
+    width: 160px;
 
     .weather-details-title {
       font-size: 14px;
@@ -221,8 +300,7 @@ header {
   }
   .degree-block {
     position: absolute;
-    // left: 50%;
-    right: 10%;
+    right: 9%;
     top: 1%;
     .degree-type {
       padding: 5px 20px;
